--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="vendor/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="vendor/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="vendor/css/material-design-iconic-font.min.css">
     <link rel="stylesheet" href="vendor/css/re-com.css">
     <link href="css/screen.css" rel="stylesheet" type="text/css">
